[OC-1118] displayes entity as sender in logging page
