# services/core/cards-consultation/src/main/java/org/lfenergy/operatorfabric/cards/consultation/model/ArchivedCardConsultationData.java
@@ -100,4 +100,5 @@ public class ArchivedCardConsultationData implements Card {
     @JsonIgnore
     @Transient
     private Boolean hasBeenRead;
+    private PublisherTypeEnum publisherType;
 }
